--- a/Angular/Demo/src/app/mycom/mycom.component.html
+++ b/Angular/Demo/src/app/mycom/mycom.component.html
@@ -1,26 +1,31 @@
 <!-- property bindings-->
-<input type="number"[value]='a'>
+<!-- <input type="number"[value]='a'>
 <p>mycom works!</p> 
  
- <!-- Event bindings -->
+ <!- Event bindings --
 <input type="number"[value]='a'>
 <p>mycom works!</p>
-<!-- <button (click)="myFun()">Sumbit</button>  -->
+<!- <button (click)="myFun()">Sumbit</button>  --
 
-<!-- Ng Module -->
+<!- Ng Module --
 <input type="number"[(ngModel)]="a"#in>
 <button (click)="myFun(a)">Sumbit</button>
 
-<!-- ngIF -->
+<!- ngIF ->
 <p *ngIf="m">Lorem ipsum dolor sit amet consectetur 
 </p>
-<!-- ngIF-Else  using true or flase and assign variable true or False-->
+<-- ngIF-Else  using true or flase and assign variable true or False->
 <p *ngIf="false;else text">Lorem ipsum dolor sit amet consectetur 
 </p>
 <ng-template #text>Alternate</ng-template>
 <p></p>
 <div class="col">hello</div>
-<!-- Ng For using arry-->
-<p *ngFor="let b of b">{{b}}</p>
+<!- Ng For using array ->
+<p *ngFor="let b of b">{{b}}</p> -->
+
+<i class="pi pi-check" style="font-size: 1rem"></i>
+<i class="pi pi-times" style="font-size: 1.5rem"></i>
+<i class="pi pi-search" style="font-size: 2rem"></i>
+<i class="pi pi-user" style="font-size: 2.5rem"></i>
 
 
