--- a/Questgen- my work1/questgen/src/app/app-pricing/app-pricing.component.html
+++ b/Questgen- my work1/questgen/src/app/app-pricing/app-pricing.component.html
@@ -2,6 +2,24 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<nav>
+    <div class="logo">
+        <!-- <a href=""><img src="../../assets/logo.png" alt="" srcset=""></a> -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 24 24"><path fill="currentColor" d="M22 7.999a1 1 0 0 0-.516-.874l-9.022-5a1.003 1.003 0 0 0-.968 0l-8.978 4.96a1 1 0 0 0-.003 1.748l9.022 5.04a.995.995 0 0 0 .973.001l8.978-5A1 1 0 0 0 22 7.999zm-9.977 3.855L5.06 7.965l6.917-3.822l6.964 3.859l-6.918 3.852z"/><path fill="currentColor" d="M20.515 11.126L12 15.856l-8.515-4.73l-.971 1.748l9 5a1 1 0 0 0 .971 0l9-5l-.97-1.748z"/><path fill="currentColor" d="M20.515 15.126L12 19.856l-8.515-4.73l-.971 1.748l9 5a1 1 0 0 0 .971 0l9-5l-.97-1.748z"/></svg>
+        <h1>Questgen</h1>
+    </div>
+    <ul>
+        <a href="" routerLink=""><li>Home</li></a>
+        <a href="" routerLink="/pricing"><li>Pricing</li></a>
+        <a href="" routerLink="/team"><li>Team</li></a>
+        <a href="" routerLink="/blog"><li>Blog</li></a>
+        <a href=""><li>Contact</li></a>
+        <a href=""><li>Product</li></a>
+
+        <input type="button" value="Start for free" routerLink="/start-for-free">
+
+    </ul>
+</nav>
 <div class="pricing">
     <h2>App Pricing</h2>
      <p>Generate high-volume questions and answers with our Pro plan.Cancel<br> any time.</p>
