--- a/Questgen- my work1/questgen/src/app/app.component.html
+++ b/Questgen- my work1/questgen/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-app-pricing></app-app-pricing> -->
-<!-- <app-team></app-team> -->
+<app-app-pricing></app-app-pricing>
+<app-team></app-team>
 <app-contact></app-contact>
 <router-outlet></router-outlet>
