--- a/Angular/reactive_forms/src/app/reactive-form/reactive-form.component.html
+++ b/Angular/reactive_forms/src/app/reactive-form/reactive-form.component.html
@@ -21,10 +21,21 @@
         </p>
     </div>
     <div class="form-group">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" formControlName="password"
+            [class.is-valid]="form['password'].touched && form['password'].valid"
+            [class.is-invalid]="form['password'].touched && form['password'].invalid" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*])[a-zA-Z\d!@#$%^&*]{8,}$">
+        <p *ngIf="form['password'].touched && form['password'].invalid" class="text-danger">
+            <span *ngIf="form['password'].touched && form['password'].hasError('required')">Password is required</span>
+            <span *ngIf="form['password'].touched && form['password'].hasError('pattern')">Password must contain at least 8 characters, including at least one uppercase letter, one lowercase letter, and one number.</span>
+        </p>
+    </div>
+    
+    <div class="form-group">
         <label for="mobilenumber" class="form-label" >MobileNumber</label>
         <input type="mobilenumber" class="form-control" formControlName="mobilenumber"
         [class.is-valid]="form['email'].touched  && form['email'].valid"
-        [class.is-invalid]="form['mobilenumber'].touched && form['mobilenumber'].invalid" pattern="^\d{10}$">
+        [class.is-invalid]="form['mobilenumber'].touched && form['mobilenumber'].invalid" pattern="^\d{10}$" maxlength="10">
         <p *ngIf="form['mobilenumber'].touched && form['mobilenumber'].invalid" class="text-danger">
             <span *ngIf="form['mobilenumber'].touched && form['mobilenumber'].hasError('required')"> Mobile Number Is Required</span>
             <span *ngIf="form['mobilenumber'].touched && form['mobilenumber'].hasError('pattern')">Enter Your Correct Mobile Number</span>
