--- a/Angular/primeng/src/app/table/table.component.html
+++ b/Angular/primeng/src/app/table/table.component.html
@@ -31,7 +31,7 @@
 
 
 <!-- --------profile--------------- -->
-    <div class="card flex justify-content-center">
+ <!-- <div class="card flex justify-content-center">
     <p-overlayPanel #op>
         <div class="container">
            <div class="profile">
@@ -41,12 +41,12 @@
             <p class="name">Mukesh</p>
             <p class="role">Junior Associate- Full Stack</p>
             <p class="email">Mukesh@gmail.com</p>
-            <p  class="Editprofile"><a href="">Edit profile</a></p>
+            <p  class="Editprofile"><span (click)="op.toggle($event);sidebarVisible1()">Edit profile</span></p>
            </div>
         </div>
     </p-overlayPanel>
     <p-button (click)="op.toggle($event)" icon="pi pi-image" label="Show"></p-button>
-</div> 
+</div>  -->
 
 
 
@@ -81,16 +81,15 @@
              </div>
 
     </div>
-</div> -->
+</div> 
 
 
 
 
 
-<!-- -----------------edit profile using sidebar--------------- -->
-<!-- 
-<p-button type="button" class="mr-2" (click)="sidebarVisible = true" icon="pi pi-arrow-right" styleClass="w-40rem"></p-button>
-<div>
+<!- -----------------edit profile using sidebar--------------- -->
+
+<!-- <div>
     <p-sidebar [(visible)]="sidebarVisible" position="right">
       <div class="container">
         <p class="header">My Profile</p>
@@ -129,6 +128,71 @@
     </p-sidebar>
   </div> -->
   
+
+
+  <!-- table binding -->
+
+<!-- app.component.html -->
+
+<form [formGroup]="userForm">
+  <label for="firstName">First Name:</label>
+  <input type="text" id="firstName" formControlName="firstName">
+
+  <label for="lastName">Last Name:</label>
+  <input type="text" id="lastName" formControlName="lastName">
+
+  <label for="age">Age:</label>
+  <input type="number" id="age" formControlName="age">
+
+  <label for="department">Department:</label>
+  <input type="text" id="department" formControlName="department">
+
+  <label for="gender">Gender:</label>
+  <!-- <select id="gender" formControlName="gender">
+    <option value="" disabled>Select Gender</option>
+    <option value="male">Male</option>
+    <option value="female">Female</option>
+  </select> -->
+  <input type="text" id="gender" formControlName="gender">
+
+  <label for="mobileNumber">MobileNumber</label>
+  <input type="text" id="mobileNumber" formControlName="mobileNumber">
+
+  <button type="submit" (click)="createEmp()">Submit</button>
+</form>
+ <div class="card">
+  <p-table [value]="alldetails" [tableStyle]="{'min-width': '50rem'}">
+      <ng-template pTemplate="header">
+          <tr>
+              <th>firstName</th>                	
+              <th>lastName</th>
+              <th>age</th>
+              <th>department</th>
+              <th>Gender</th>
+              <th>MobileNumber</th>
+              <th>Edit</th>
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-product>
+          <tr [ngClass]="{'row-accessories': product.category === 'Accessories'}">
+              <td>{{product.firstName}}</td>
+              <td>{{product.lastName}}</td>
+              <td>{{product.age}}</td>
+              <td>{{product.department}}</td>
+              <td>{{product.gender}}</td>
+              <td>{{product.mobileNumber}}</td>
+              <td><button (click)="editEmp(product.employeeID)">Edit</button></td>
+              <td>
+                  <div [ngClass]="{'outofstock': product.quantity === 0, 'lowstock': (product.quantity > 0 && product.quantity < 10),'instock': product.quantity > 10}">
+                      {{product.quantity}}
+                  </div>
+              </td>
+          </tr>
+      </ng-template>
+  </p-table>
+
+
+</div>
 
 
 
