--- a/Angular/primeng/src/app/table/table.component.scss
+++ b/Angular/primeng/src/app/table/table.component.scss
@@ -30,6 +30,7 @@
             line-height: 50px;
             align-items: center;
             display: flex;
+            cursor: pointer;
         
         }
      
@@ -40,121 +41,151 @@
 
 // --------edit profile using sidebar------
 
-// .container
-// {
-//     background-color: #FFFFFF;
-//     width: 77%;
+.container
+{
+    background-color: #FFFFFF;
+    width: 60%;
    
-// }
-//     .header
-//     {
-//         color:#333;
-//         font-size: 16px;
-//         font-weight: 600;
-//         padding: 16px;
-//         margin-left: 20px;
-//     }
-//     .uploadphoto
-//     {
-//         display:flex;
-//             flex-direction: column;
-//             justify-content: center;
-//             align-items: center;
-//         .profileicon{
-//             display: flex;
-//             width: 64px;
-//             height: 64px;
-//             justify-content:center;
-//             align-items: center;
-//             border-radius: 63px;
-//             background: #0A153A;
-//             color: #FFF;
-//             font-size: 24px;
-//             font-weight: 600;
-//    }
-//    .uploadicon
-//    {
-//         color: #0C66E4;
+}
+    .header
+    {
+        color:#333;
+        font-size: 16px;
+        font-weight: 600;
+        padding: 16px;
+        // margin-left: 20px;
+    }
+    .uploadphoto
+    {
+        display:flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        .profileicon{
+            display: flex;
+            width: 64px;
+            height: 64px;
+            justify-content:center;
+            align-items: center;
+            border-radius: 63px;
+            background: #0A153A;
+            color: #FFF;
+            font-size: 24px;
+            font-weight: 600;
+   }
+   .uploadicon
+   {
+        color: #0C66E4;
         
-//    }
-//    .uploadtext
-//    {
-//     color: #0C66E4;
-//     font-size: 14px;
-//     font-weight: 400;
-//     text-decoration-line: underline;
-//    }
-//    .upload
-//    {
-//     display: flex;
+   }
+   .uploadtext
+   {
+    color: #0C66E4;
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration-line: underline;
+   }
+   .upload
+   {
+    display: flex;
     
-//    }
-// }
-// .form {
-//     width: 350px;
-//     padding: 5px;
-// }
-// .details
-// {
-//     padding: 5px;
-//     line-height: 29px;
+   }
+}
+.form {
+    width: 350px;
+    padding: 5px;
+}
+.details
+{
+    padding: 5px;
+    line-height: 29px;
 
-// .labelname
-//     {
-//         color: #333;
-//         font-size: 16px;
-//         font-weight: 400;
-//     }
-//     .inputField {
-//         font-size: 14px;
-//         font-weight: 400;
-//         line-height: 24px;
-//         width: 100%;
-//         border-radius: 4px;
-//         border: 1px solid #828282;
-//         margin-top: 10px;
-//         padding: 7px;
-//     }
-//     .inputField::placeholder {
-//         padding-left: 5px;
-//         font-family: 'poppins';
-//         color: #828282;
-//         font-size: 14px;
-//         font-weight: 300;
+.labelname
+    {
+        color: #333;
+        font-size: 16px;
+        font-weight: 400;
+    }
+    .inputField {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24px;
+        width: 100%;
+        border-radius: 4px;
+        border: 1px solid #828282;
+        margin-top: 10px;
+        padding: 7px;
+    }
+    .inputField::placeholder {
+        padding-left: 5px;
+        font-family: 'poppins';
+        color: #828282;
+        font-size: 14px;
+        font-weight: 300;
         
-//     }
-//     .emailtext
-//     {
-//         color: #333;
-//         font-size: 16px;
-//         font-weight: 500;
-//         line-height: 4px;
-//     }
-// }
-// .footer
-// {
-//     display: flex;
-//     flex-direction: row;
-//     gap:12px;
-//     justify-content: flex-end;
-// }
-// .cancel
-// {
-//     display: flex;
-//     padding: 8px 12px;
-//     justify-content: center;
-//     border-radius: 4px; 
-//     border: 1px solid #1A0D3F;
-// }
-// .save
-// {
-//     display: flex;
-//     padding: 8px 12px;
-//     justify-content: center;
-//     border-radius: 4px;
-//     background: #0FA489;
-//     border: 1px solid #0FA489;
-//     width: 22%;
+    }
+    .emailtext
+    {
+        color: #333;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 4px;
+    }
+}
+.footer
+{
+    display: flex;
+    flex-direction: row;
+    gap:12px;
+    justify-content: flex-end;
+}
+.cancel
+{
+    display: flex;
+    padding: 8px 12px;
+    justify-content: center;
+    border-radius: 4px; 
+    border: 1px solid #1A0D3F;
+}
+.save
+{
+    display: flex;
+    padding: 8px 12px;
+    justify-content: center;
+    border-radius: 4px;
+    background: #0FA489;
+    border: 1px solid #0FA489;
+    width: 20%;
 
-// }
+}
 
+form {
+    max-width: 400px;
+    margin: auto;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input,
+  select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+  }
+  
+  button {
+    padding: 10px;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+  }
+  
+  button:disabled {
+    background-color: #aaa;
+    cursor: not-allowed;
+  }
+  
