--- a/Angular/primeng/src/app/app.component.html
+++ b/Angular/primeng/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-table></app-table>
+<!-- <app-table></app-table> -->
+<!-- <app-virtual-scroll></app-virtual-scroll> -->
+<app-campaign-form></app-campaign-form>
 <router-outlet></router-outlet>
